Added Enhanced Search using Dorar.net API

--- a/hadiths/templates/hadith.html
+++ b/hadiths/templates/hadith.html
@@ -35,7 +35,7 @@ Hadith
   {% else %}
   <!-- User is not logged in, display login prompt -->
   <div style="background-color: #f8d7da; color: #721c24; padding: 10px; border-radius: 5px;">
-    Please <a href="{% url 'login' %}">log in</a> to keep track of your progress.
+    Please <a href="{% url 'account_login' %}">log in</a> to keep track of your progress.
   </div>
 
   {% endif %}
