--- a/hadiths/templates/layout.html
+++ b/hadiths/templates/layout.html
@@ -1,40 +1,62 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-  <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <!-- Use a CDN link for Bootstrap instead of a static file -->
-  <link rel="stylesheet" href="{% static 'style.css' %}">
-  <!-- Add the meta viewport tag -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <!-- Include Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <!-- Use a CDN link for Bootstrap instead of a static file -->
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <!-- Add the meta viewport tag -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <title>Hadith Hub</title>
+    <title>Hadith Hub</title>
+    <style>
 
-</head>
-<body>
-  <header>
-    <div class="header-container">
-      <a class="brand link" href="{% url 'index'%}">Hadith Hub</a>
-      <div class="header-links">
-        {% if user.is_authenticated %}
-          <a class="link" href="{% url 'logout' %}">Logout</a>
-        {% else %}
-          <a class="link" href="{% url 'login' %}">Login</a>
-        {% endif %}
-        <a class="link" href="{% url 'profile' %}">Profile 🧑‍💼</a>
+      .palestine {
+        margin-bottom: 10px;
+        padding: 8px 12px;
+        background-color: #008800; /* Light red */
+        color: black; /* Dark red */
+        border: 1px solid #f5c6cb; /* Red border */
+        border-radius: 4px;
+        font-family: Tahoma, Arial, sans-serif; /* Use the Amiri font for the paragraph */
+        text-align: right;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <a class="brand link" href="{% url 'index'%}">Hadith Hub</a>
+        <div class="header-links">
+          {% if user.is_authenticated %}
+          <a class="link" href="{% url 'account_logout' %}">Logout</a>
+          {% else %}
+          <a class="link" href="{% url 'account_login' %}">Login</a>
+          {% endif %}
+          <a class="link" href="{% url 'profile' %}">Profile 🧑‍💼</a>
+        </div>
       </div>
+    </header>
+
+
+
+    <div class="container">
+      <p class="palestine">
+        <span style="font-weight: bold"
+          >&#x1F1F5;&#x1F1F8; اللهم انصر اخواننا في غزة</span
+        >
+      </p>
+      {% block content %} {% endblock %}
     </div>
-  </header>
-  
-  
-  
-  <div class="container">
-    {% block content %}
-    {% endblock %}
-  </div>
-  <footer>
-    <p>© Hadith Hub 2023</p>
-  </footer>
-</body>
+    <footer>
+      <p>© Hadith Hub 2023</p>
+    </footer>
+  </body>
 </html>
