--- a/hadiths/templates/account/signup.html
+++ b/hadiths/templates/account/signup.html
@@ -11,14 +11,14 @@
     border: 2px solid #ccc;
     border-radius: 4px;
   }
-  input[type="email"] {
+  input[type="text"] {
     display: none;
   }
-  label[for="id_email"] {
+  label[for="id_username"] {
     display: none;
   }
 
-  input[type="text"]:focus,
+
   input[type="password"]:focus,
   input[type="email"]:focus {
     border: 2px solid #4caf50;
